Contributor images added

--- a/templates/HFC/privacy_policy.html
+++ b/templates/HFC/privacy_policy.html
@@ -1,12 +1,12 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
-{% block title %} Privacy Policy {% endblock %}
+{% block title %} Privacy Policy | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap">
         <div class="content-width sm-content-width">
             <div class="banner__main">
-                <h1>Privacy Policy | Hack For Change</h1>
+                <h1>Privacy Policy </h1>
                 <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
             </div>
         </div>
@@ -21,18 +21,18 @@
                     <h1>Privacy Policy</h1><br>
                     
                     <h2>1. Introduction</h2>
-                    <p style ="text-align:justify;text-justify:inter-word;">These Privacy Policy (“Privacy Policy”) apply to the use of the website and products provided by HackForChange (hereinafter also referred as “we” or “us”). Our registered office is at Hyderabad.</p>
-                    <p style ="text-align:justify;text-justify:inter-word;">This Privacy Policy applies and has effect in respect of all services and other products, software, made available by us, as well as any other online features relating to the website and its content (the “Service(s)”).</p>
-                    <p style ="text-align:justify;text-justify:inter-word;">If you have any questions or comments about this Privacy Policy, please contact us at contact@hackforchange.co.</p>
-                    <p style ="text-align:justify;text-justify:inter-word;">We are committed to protecting and respecting your privacy. The Privacy Policy explains the basis on which personal information we collect from you will be processed by us or on our behalf. Where we decide the purpose or means for which personal data you supply through these Services is processed, we are the “controller”. Where you decide the purpose or means for which personal data you supply through these Services is processed, you are the “controller”. We will comply with proper and applicable data protection laws, including the General Data Protection Regulation 2016/679.</p>
+                    <p style ="text-align:justify;text-justify:inter-word;">These Privacy Policy (“Privacy Policy”) apply to the use of the website and products provided by HackForChange (hereinafter also referred as “we” or “us”). Our registered office is at Hyderabad.</p><br>
+                    <p style ="text-align:justify;text-justify:inter-word;">This Privacy Policy applies and has effect in respect of all services and other products, software, made available by us, as well as any other online features relating to the website and its content (the “Service(s)”).</p><br>
+                    <p style ="text-align:justify;text-justify:inter-word;">If you have any questions or comments about this Privacy Policy, please contact us at contact@hackforchange.co.</p><br>
+                    <p style ="text-align:justify;text-justify:inter-word;">We are committed to protecting and respecting your privacy. The Privacy Policy explains the basis on which personal information we collect from you will be processed by us or on our behalf. Where we decide the purpose or means for which personal data you supply through these Services is processed, we are the “controller”. Where you decide the purpose or means for which personal data you supply through these Services is processed, you are the “controller”. We will comply with proper and applicable data protection laws, including the General Data Protection Regulation 2016/679.</p><br>
                     <p style ="text-align:justify;text-justify:inter-word;">We encourage you to read this Privacy Policy carefully as it contains important information about the following:</p>
                     <ul style ="list-style-type:square;list-style-position: inside;">
                       <li>What information we may collect about you;</li>
                       <li>How we will use the information we collect about you;</li>
                       <li>Whether we will disclose your details to anyone else; and</li>
                       <li>Your choices and rights regarding the personal information you have provided to us.</li>
-                    </ul>
-                    <p style ="text-align:justify;text-justify:inter-word;">The Services may contain links to services owned and operated by third parties. We may also use some third-parties software or products to provide you with the Service properly. If we do so and provide third -parties of any personal data you can be sure the transfer is legal and secured. These third-party services may have their own privacy policies and we recommend that you review them. They will govern the use of personal information that you submit or which is collected by cookies and other tracking technologies whilst using these services. We do not accept any responsibility or liability for the privacy practices of such third party services and your use of these is at your own risk.</p>
+                    </ul><br>
+                    <p style ="text-align:justify;text-justify:inter-word;">The Services may contain links to services owned and operated by third parties. We may also use some third-parties software or products to provide you with the Service properly. If we do so and provide third -parties of any personal data you can be sure the transfer is legal and secured. These third-party services may have their own privacy policies and we recommend that you review them. They will govern the use of personal information that you submit or which is collected by cookies and other tracking technologies whilst using these services. We do not accept any responsibility or liability for the privacy practices of such third party services and your use of these is at your own risk.</p><br>
                     <p style ="text-align:justify;text-justify:inter-word;">We may make changes to this Privacy Policy in the future. You should check this page from time to time to ensure you are aware of any changes. Where appropriate we may notify you of such changes.</p>
                     <br>
                     <h2>2. Information we may collect about you</h2>
@@ -52,8 +52,8 @@
                     <p style ="text-align:justify;text-justify:inter-word;">We do not collect personal information from anyone under the age of {{ user_age }}. If you notice we collect and process personal data of anyone under this age, please contact us. We encourage parents and legal guardians to monitor their children’s Internet usage and to help enforce this Policy by instructing their children never to provide personal information through the websites or Services.</p>
                     <br>
                     <h2>7. Data sharing</h2>
-                    <p style ="text-align:justify;text-justify:inter-word;">We will share your information (including personal data) with third parties only in the ways that are described in this Privacy Policy.</p>
-                    <p style ="text-align:justify;text-justify:inter-word;">Personnel, suppliers or subcontractors: We keep your information confidential, but may disclose it to our personnel, suppliers or subcontractors insofar as it is reasonably necessary for the purposes set out in this Privacy Policy. However, this is on the basis that they do not make independent use of the information, and have agreed to safeguard it.</p>
+                    <p style ="text-align:justify;text-justify:inter-word;">We will share your information (including personal data) with third parties only in the ways that are described in this Privacy Policy.</p><br>
+                    <p style ="text-align:justify;text-justify:inter-word;">Personnel, suppliers or subcontractors: We keep your information confidential, but may disclose it to our personnel, suppliers or subcontractors insofar as it is reasonably necessary for the purposes set out in this Privacy Policy. However, this is on the basis that they do not make independent use of the information, and have agreed to safeguard it.</p><br>
                     <p style ="text-align:justify;text-justify:inter-word;">Required by law: In addition, we may disclose your information to the extent that we are required to do so by law (which may include to government bodies and law enforcement agencies); in connection with any legal proceedings or prospective legal proceedings; and in order to establish, exercise or defend our legal rights.</p>
                     <br>
                     <h2>8. Data transmission</h2>
@@ -93,10 +93,10 @@
                             <div id="mce-responses" class="clear">
                                     <div class="response" id="mce-error-response" style="display:none"></div>
                                     <div class="response" id="mce-success-response" style="display:none"></div>
-                                </div>
-                            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
                             </div>
+                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+                            
                         </form>
                     </div>
                 </aside><!--sidebar -->
@@ -104,4 +104,7 @@
         </div>
     </div>
     <!--main end -->
+    {%endblock%}
+    {%block js%}
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
     {%endblock%}
