--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -41,7 +41,9 @@
                             <p>Explore problem statements across various issue areas</p>
                                 <ul>
                                     {% for prob_list in problems_list %}
-                                    <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a></li>
+                                        
+                                    <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}" style="text-transform: capitalize;">{{prob_list.issue_area}}</a></li>
+                                        
                                     {% endfor %}
                                 </ul>
                                     
