Updating home page content

--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -18,8 +18,8 @@
                 <img src="{% static 'images/developer-team-2043022-0.svg' %}" srcset="images/developer-team-2043022-0@2x.png 2x, images/developer-team-2043022-0@3x.png 3x " alt="Pic">
             </div>
             <div class="home-banner__left">
-                <h1>Lorem ipsum dolor sit amet consectetur adipiscing elit</h1>
-                <p class="large sbold">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
+                <h1>Lets join hands to create a lasting social change</h1>
+                <p class="large sbold">Our approach to empowerment is to design technology-driven systemic solutions for present-day social challenges</p>
                 <div class="banner__btn">
                     <a class="btn btn--info" href="{% url 'about' %}#ourMission">Our Mission</a><a class="btn btn--border" href="{% url 'donate' %}">Donate</a>
                 </div>
@@ -35,8 +35,9 @@
         <div class="content-width">
             <div class="solution__inner">
                 <div class="solution__right">
-                    <h2>Solutions We Build</h2>
-                    <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music lorem ipsum dolor sit amcetghjj adipscing sed do eiumosod ritfghdy incidudunt ut labore.</p>
+                    <h2>Our focus areas</h2>
+                    <p>Our primary focus is on empowering lasting social change by improving ones' relationship with the government and also with his community as a whole.
+                    </p>
                     <a class="btn btn--border" href="{% url 'projects' %}">Read More</a>
                 </div>
             </div>
@@ -47,20 +48,20 @@
     <div class="content-width">
         <div class="contribute__main">
             <div class="contribute__top">
-                <h2 class="underline">How can you Contribute?</h2>
+                <h2 class="underline">How can you contribute?</h2>
                 <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
             </div>
             <div class="contribute__outer">
                 <div class="contribute__sec">
                     <div class="contribute__info">
-                        <h4>Coders/Software Engineers</h4>
+                        <h4>Coders</h4>
                         <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
                         <img src="{% static 'images/undraw_code_typing_7jnv.svg' %}" srcset="images/undraw_code_typing_7jnv@2x.png 2x, images/undraw_code_typing_7jnv@3x.png 3x" alt="Pic">
                     </div>
                 </div>
                 <div class="contribute__sec">
                     <div class="contribute__info">
-                        <h4>Working Professionals</h4>
+                        <h4>Designers</h4>
                         <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
                         <img width="238" src="{% static 'images/contribute-img2.svg' %}" alt="Pic">
                     </div>
