--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -57,7 +57,7 @@
                                     src="{% static 'images/envelope-icon-w.svg' %}"
                                     alt="icon"></i>contact@hackforchange.co</a></p>
                     <p><a href="tel:+04090062872"><i><img width="19" src="{% static 'images/phone-icon-w.svg' %}"
-                                    alt="icon"></i>+040 90062872</a></p>
+                                    alt="icon"></i>+91 99633 62872</a></p>
                 </div>
             </div>
             <div class="footer__right">
@@ -65,7 +65,7 @@
                 <ul>
                     <li><a href="https://www.facebook.com/HackForChange"><img width="30"
                                 src="{% static 'images/facebook-icon.svg' %}" alt="Icon"></a></li>
-                    <li><a href="#"><img width="35" src="{% static 'images/insta-icon.svg' %}" alt="Icon"></a></li>
+                    <li><a href="https://www.instagram.com/hackforchange/"><img width="35" src="{% static 'images/insta-icon.svg' %}" alt="Icon"></a></li>
                     <li><a href="https://www.linkedin.com/showcase/hack-for-change"><img width="31"
                                 src="{% static 'images/linkedin-icon.svg' %}" alt="Icon"></a></li>
                 </ul>
@@ -77,7 +77,7 @@
                 <p>An Initiative By<a href="https://www.ctsc-india.org/"><img width="171"
                             src="{% static 'images/ctsc-logo.svg' %}" alt="logo"></a></p>
             </div>
-            <div class="copyright__right">© Copyright @Hack For Change 2020</div>
+            <div class="copyright__right">© Copyright 2020, All Rights Reserved</div>
         </footer>
     </div>
 </div>
