--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -5,7 +5,8 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    
+    <meta property="fb:app_id" content="{{FB_APP_ID}}" />
+    {% block meta_tags %}{% endblock %}
     <title>{% block title %} {% endblock %}</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">  
