--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -177,11 +177,8 @@
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
-                                    <p class="large bold">Problem Statement</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat.Duis aute irure dolor</p>
+                                    <p class="large bold">Problem Statement Identification</p>
+                                    <p> Our partner organizations with deep domain expertise suggest problem statements and a possible solution to the issues that can be solved by leveraging technology.</p>
                                 </div>
                             </div>
                         </div>
@@ -193,11 +190,9 @@
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
-                                    <p class="large bold">Team analyzing the Problem Statement</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat.Duis aute irure dolor</p>
+                                    <p class="large bold">Solutioning And Planning</p>
+                                    <p> Our core team of technologists and social scientists evaluate the problem statement, analyze effectiveness of the proposed solution, and devise a way forward. 
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -209,11 +204,8 @@
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
-                                    <p class="large bold">Contributors join HFC Community </p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat.Duis aute irure dolor</p>
+                                    <p class="large bold">Contributors Join HFC Community </p>
+                                    <p> Developers and designers from various colleges and cities join the HackForChange community at a college center level or a city chapter level based on their availability.</p>
                                 </div>
                             </div>
                         </div>
@@ -225,11 +217,9 @@
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
-                                    <p class="large bold">Project Assigned</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat.Duis aute irure dolor</p>
+                                    <p class="large bold">Project Planning & Groundwork</p>
+                                    <p> Our core team of project co-ordinators along with the leadership team, define a product roadmap and create an execution plan.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -241,11 +231,10 @@
                             </div>
                             <div class="howItWorks__info">
                                 <div class="howItWorks__info__inner">
-                                    <p class="large bold">Project Launch</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat.Duis aute irure dolor</p>
+                                    <p class="large bold">Collaborative Execution</p>
+                                    <p>
+                                        Based on the defined product roadmap and the project plan, solution is developed through community of contributors at college level or city level.
+                                    </p>
                                 </div>
                             </div>
                         </div>
