--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -49,27 +49,27 @@
         <div class="contribute__main">
             <div class="contribute__top">
                 <h2 class="underline">How can you contribute?</h2>
-                <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
+                <p>Join our community of coders, designers and experienced mentors to work on specific problem statements</p>
             </div>
             <div class="contribute__outer">
                 <div class="contribute__sec">
                     <div class="contribute__info">
                         <h4>Coders</h4>
-                        <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
+                        <p>Develop robust and scalable software applications based on product roadmaps</p>
                         <img src="{% static 'images/undraw_code_typing_7jnv.svg' %}" srcset="images/undraw_code_typing_7jnv@2x.png 2x, images/undraw_code_typing_7jnv@3x.png 3x" alt="Pic">
                     </div>
                 </div>
                 <div class="contribute__sec">
                     <div class="contribute__info">
                         <h4>Designers</h4>
-                        <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
+                        <p>Ideate and design solutions for some of the pressing social problems of today</p>
                         <img width="238" src="{% static 'images/contribute-img2.svg' %}" alt="Pic">
                     </div>
                     </div>
                 <div class="contribute__sec">
                     <div class="contribute__info">
                         <h4>Mentors</h4>
-                        <p>Peep at some distant orb has power to raise and purify our thoughts like a strain of sacred music.</p>
+                        <p>Guide our community of developers from various city chapters and colleges</p>
                         <img src="{% static 'images/undraw_online_learning_ao11.svg' %}" srcset="images/undraw_online_learning_ao11@2x.png 2x, images/undraw_online_learning_ao11@3x.png 3x" alt="Pic">
                     </div>
                 </div>
@@ -83,7 +83,7 @@
 <div class="home-donate-wrap">
     <div class="content-width">
         <div class="home-donate-sec">
-            <p class="large bold">Lorem ipsum dolor sit amet consectetur adipiscing</p>
+            <p class="large bold">Your donations will go a long way in sustaining our mission</p>
             <a class="btn btn--info" href="{% url 'donate' %}">Donate</a>
         </div>
     </div>
@@ -91,14 +91,14 @@
 <div class="we-work-wrap">
     <div class="content-width">
         <div class="we-work__main">
-            <h2 class="underline">Who We Work With?</h2>
-            <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+            <h2 class="underline">Our brothers in arms</h2>
+            <p class="large">A few of the governmental, non-governmental and social organisations who have partned with us, to scale their mission, using our community of developers and designers</p>
             <div class="we-work__sec">
                 <div class="we-work__fig"><img src="{% static 'images/faq-logo.svg' %}" srcset="images/faq-logo@2x.png 2x, images/faq-logo@3x.png 3x"></div>
                 <div class="we-work__fig"><img src="{% static 'images/fdr-logo.svg' %}" srcset="images/fdr-logo@2x.png 2x, images/fdr-logo@3x.png 3x"></div>
                 <div class="we-work__fig"><img src="{% static 'images/md-logo.svg' %}" srcset="images/md-logo@2x.png 2x, images/md-logo@3x.png 3x"></div>
             </div>
-            <p>Does your non-profit want to work with Hack For Change? <a href="{% url 'contact' %}">Send us a note</a></p>
+            <p>Reach out to us, if you think your organization can leverage our help? <a href="{% url 'contact' %}">Send us a note</a></p>
         </div>
     </div>
 </div>
